# Nik-SecuNik

./: .gitignore  Here is your ultimate.docx  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  start-secunik.bat
backend/: .env.example  config.py  fix_pydantic_v2.py  main.py  requirements.txt
backend/analyzers/: ai_analyzer.py  anomaly_detector.py  correlation_engine.py  ioc_extractor.py  mitre_analyzer.py  pattern_analyzer.py  sigma_analyzer.py  yara_analyzer.py
backend/api/: analysis.py  history.py  rules.py  upload.py  virustotal.py  websocket.py
backend/core/: analysis_engine.py  file_identifier.py  parser_factory.py  storage_manager.py
backend/integrations/: openai_client.py  threat_intel_client.py  virustotal_client.py
backend/parsers/: __init__.py  base_parser.py
backend/parsers/archives/: zip_parser.py
backend/parsers/cloud/: aws_cloudtrail_parser.py
backend/parsers/code/: source_code_parser.py
backend/parsers/database/: sqlite_parser.py
backend/parsers/documents/: pdf_parser.py
backend/rules/: __init__.py  custom_rule_engine.py  rule_importer.py  rule_manager.py  rule_validator.py
backend/utils/: encoding_utils.py  file_utils.py  hash_utils.py  time_utils.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx
rules/: index.json
scripts/: download_rules.py  setup.sh  test_parsers.py
tests/: conftest.py  test_analyzers.py  test_api.py
(+80 files in other folders)
